# diapo

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  crowdin.yml  docker-compose.yml  publiccode.yml
.github/workflows/: ci.yml
config/keycloak/: realm.json
docs/: accessibility.md  architecture.md  crdt-schema.ts
src/backend/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
src/backend/core/: admin.py  apps.py  models.py  oidc.py  permissions.py  pptx_import.py  render.py  serializers.py  tasks.py  tests.py  urls.py  verify_pptx_import.py  views.py
src/backend/core/migrations/: 0001_initial.py
src/backend/scripts/: prove_abilities.py
src/backend/slides/: __init__.py  asgi.py  celery.py  logging.py  settings.py  urls.py  wsgi.py
src/frontend/: Dockerfile  Dockerfile.collab  next.config.mjs  package-lock.json  package.json  tsconfig.json
src/frontend/servers/y-provider/: .gitignore  server.mjs  verify-auth.mjs  verify-persistence-backend.mjs  verify-persistence.mjs
src/frontend/src/: App.tsx  cunningham-style.css  env.ts  styles.css
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/app/home/: page.tsx
src/frontend/src/features/dashboard/: Dashboard.css  Dashboard.tsx  api.ts  auth.ts
src/frontend/src/features/slide-editor/components/: AppLauncher.css  AppLauncher.tsx  ContextMenu.tsx  Editor.tsx  FloatingToolbar.css  FloatingToolbar.tsx  FollowBanner.css  FollowBanner.tsx  Inspector.css  Inspector.tsx  NotesBar.css  NotesBar.tsx  OutlineView.css  OutlineView.tsx  Presence.css  Presence.tsx  Presenter.css  Presenter.tsx  Ribbon.css  Ribbon.tsx  Rulers.css  Rulers.tsx  ShareDialog.css  ShareDialog.tsx  SlideCanvas.tsx  SlideObjectView.tsx  SlidePanel.css  SlidePanel.tsx  SlideStatic.tsx  StatusBar.css  StatusBar.tsx  TextBox.css  TextBox.tsx  TextFormatControls.css  TextFormatControls.tsx  TopBar.css  TopBar.tsx
src/frontend/src/features/slide-editor/components/inspector/: AnimationsPanel.tsx  ArrangePanel.tsx  ChartDataEditor.tsx  DesignPanel.tsx  FormatPanel.tsx  MediaPanel.tsx  MultiPanel.tsx  controls.tsx
src/frontend/src/features/slide-editor/components/objects/: AudioObject.tsx  ChartObject.tsx  TableObject.css  TableObject.tsx  VideoObject.tsx  renderers.tsx
src/frontend/src/features/slide-editor/components/overlays/: AccessibilityChecker.tsx  CommandPalette.css  CommandPalette.tsx  CommentsPanel.css  CommentsPanel.tsx  DiagramDialog.tsx  FindReplace.css  FindReplace.tsx  ImportDialog.tsx  Modal.css  Modal.tsx  VersionHistory.css  (+2 more)
src/frontend/src/features/slide-editor/crdt/: comments.d.ts  comments.js  deck.d.ts  deck.js  guard.d.ts  guard.js  scene.d.ts  scene.js  slides.d.ts  slides.js  text.d.ts  text.js  verify-crdt.mjs  verify-deck.mjs  verify-text.mjs  verify-textsync.mjs  verify-undo.mjs  versions.d.ts  versions.js
src/frontend/src/features/slide-editor/data/: fonts.ts  icons.ts  layouts.ts  shapes.ts  templates.ts  themes.ts
src/frontend/src/features/slide-editor/hooks/: useDeck.ts  useKeyboard.ts  useUndoRedo.ts
src/frontend/src/features/slide-editor/lib/: align.ts  deckTheme.tsx  diagram.ts  exportPdf.ts  exportPptx.ts  insert.ts  parseSheet.ts  snapping.ts  upload.ts
src/frontend/src/features/slide-editor/net/: useCollab.ts
src/frontend/src/features/slide-editor/state/: editorContext.tsx
src/frontend/src/features/slide-editor/tiptap/: FontSize.ts
src/frontend/src/features/suite/: apps.ts
src/frontend/src/i18n/: LangSync.tsx  LanguagePicker.tsx  index.ts
src/frontend/src/i18n/locales/: en.json  fr.json
src/frontend/src/lib/: csrf.ts
(+6 files in other folders)
